test/pass/call_piping/pipe_verify_order_of_ops.lly
var v: list[integer] = []

define f(input: integer => integer)
{
    v.append(input)
    return input
}

f(4) |> [f(1), f(2), f(3)].append

if v != [1, 2, 3, 4]:
    stderr.write("Failed.\n")
