test/fail/internal/invalid_if_return_fold.lly
#[
SyntaxError: Missing return statement at end of function.
Where: File "invalid_if_return_fold.lly" at line 14
]#

define f(a: integer => integer)
{
    if a == 1:
        return 1
    elif a == 1:
        a = 2
    else:
        return 3
}
